@@ -157,7 +157,7 @@ that cygwin-1.3.x is no longer supported; upgrade to cygwin-1.5.5 or newer.)
     <pre>
    mkdir -p /netrel/src && cd /netrel/src
    mkdir -p old
-   wget -P/tmp ftp://lilypond.org/pub/LilyPond/v1.9/lilypond-1.9.9.tar.gz
+   wget -P/tmp http://lilypond.org/download/v1.9/lilypond-1.9.9.tar.gz
    PATH=/netrel/bin:$PATH pimport lilypond</pre>
     You can also pull from CVS, but the important thing is to
     have lilypond 1.9.9 or newer, and just one directory named
@@ -214,7 +214,7 @@ cross compile for Cygwin:
     <a href="http://lilypond.org/debian/dists/unstable">precompiled toolchain
       gcc-i686-cygwin binaries for Debian GNU/Linux i386</a>.  Add to your
       /etc/apt/sources.list: <pre>
-      deb ftp://ftp.lilypond.org/pub/LilyPond/binaries/debian unstable .
+      deb http://lilypond.org/download/binaries/debian unstable .
     </pre> Do: <pre>
       apt-get update
       apt-get install binutils-i686-cygwin gcc-i686-cygwin
