@@ -186,7 +186,7 @@
     <td></td>
     <td><b>Download 
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/v2.0/lilypond-2.0.1.tar.gz">tarball</a>
+	   href="htt://lilypond.org/download/v2.0/lilypond-2.0.1.tar.gz">tarball</a>
 	(<a href="../devel/#warning">warning</a>)
       </b>
     </td>
@@ -230,10 +230,10 @@
       1
     </td>
     <td><b>Download 
-	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-2.1.3-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-2.1.3-1.i386.rpm">lilypond</a>,
 	
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-2.1.3-1.i386.rpm">documentation</a></b>
+	   href="http://lilypond.org/download/binarieis/RedHat-9/lilypond-documentation-2.1.3-1.i386.rpm">documentation</a></b>
     </td>
     <td>2.1.3</td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
@@ -261,7 +261,7 @@
     <td></td>
     <td><b>Download 
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/v2.1/lilypond-2.1.3.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v2.1/lilypond-2.1.3.tar.gz">tarball</a>
 	(<a href="../devel/#warning">warning</a>)
       </b>
     </td>
@@ -318,10 +318,10 @@
       9 
     </td>
     <td><b>Download 
-	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.8.2-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-1.8.2-1.i386.rpm">lilypond</a>,
 	
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.8.2-1.i386.rpm">documentation</a></b>
+	   href="http://lilypond.org/download/binaries/RedHat-9/lilypond-documentation-1.8.2-1.i386.rpm">documentation</a></b>
       (<a href="#redhat-notes">NOTE</a>)
     </td>
     <td>1.8.2</td>  
@@ -442,7 +442,7 @@
     <td>
       <b>Download 
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/v1.8/lilypond-1.8.2.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v1.8/lilypond-1.8.2.tar.gz">tarball</a>
       </b>
       (<a href="../devel/#warning">warning</a>)
     </td>
@@ -618,7 +618,7 @@
     <td>
       <b>Download 
 	<a
-	   href="ftp://ftp.lilypond.org/pub/LilyPond/v1.6/lilypond-1.6.12.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v1.6/lilypond-1.6.12.tar.gz">tarball</a>
       </b>
       (<a href="../devel/#warning">warning</a>)
     </td>
